--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "ufukdogan92/pdo-db-connect": "dev-master",
-        "giggsey/libphonenumber-for-php": "^8.0@dev"
+        "giggsey/libphonenumber-for-php": "^8.0@dev",
+        "doctrine/dbal": "4.0.x-dev"
     }
 }
